last fixes and back to time

--- a/citybike-client/public/index.html
+++ b/citybike-client/public/index.html
@@ -24,8 +24,7 @@
     <title>Map</title>
     <style>
         .leaflet-container {
-            height: 600px;
-            width: 80%;
+            height: 60vh;
         }
     </style>
   </head>
